--- a/style.css
+++ b/style.css
@@ -12,15 +12,16 @@ a {
 
 h1 {
     color: white;
+    padding: 0px 0px 20px 0px;
 }
 
 .header_img {
-    margin: 30px 0px 0px 0px;
+    margin: 50px 0px 20px 0px;
     border: 8px solid white;
     border-radius: 20px;
 }
 
-.navbar ul{
+/*.navbar ul{
     padding: 10px;
     background: black;
 }
@@ -28,7 +29,23 @@ h1 {
 .navbar li {
     display: inline;
     padding: 0px 10px 0px 10px;
-} 
+} */
+
+.nav {
+  background-color: #001218;
+}
+
+.nav-link {
+  color: white;
+}
+
+.breadcrumb {
+  background-color: black;
+}
+
+.homebody {
+  background: #e5f6ff;
+}
 
 body {
     background: rgb(245, 255, 255);
@@ -51,6 +68,31 @@ body {
     text-align: center;
 }
 
+.jumbotron {
+    background: url("https://i.pinimg.com/originals/9c/92/97/9c92979de6be95a5e99d61fa47bbd165.gif");
+    background-size: cover;
+    background-position: bottom;
+    margin: 30px 0px 0px 0px;
+}
+
+.lead {
+  background-color: rgb(255, 255, 255, 0.6);
+}
+
+.display-4 {
+  text-align: center;
+  color: white;
+  /*background-color: rgb();*/
+}
+
+.button {
+  text-align: center;
+}
+
+.button .btn {
+  background-color: purple;
+  border: 3px solid white;
+}
 
 
 .class-schedule {
@@ -76,6 +118,13 @@ td {
     border-bottom: 2px solid black;
 }
 
+.class-body h2 {
+  padding: 40px 0px 20px 0px;
+}
+
+.class-body p {
+  padding: 30px 0px 0px 10px;
+}
 
 
 h2 {
@@ -112,8 +161,20 @@ p {
 }
 .iframe-container2 iframe {
   position: absolute;
-  top:0;
+  top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.interests-body h2 {
+  padding: 40px 0px 0px 0px;
+}
+
+.interests-body p {
+  padding: 5px 50px 0px 50px;
+}
+
+.interests-body h3 {
+  padding: 30px 0px 0px 0px;
 }
