--- a/style.css
+++ b/style.css
@@ -87,11 +87,20 @@ body {
 
 .button {
   text-align: center;
+  color: white;
 }
 
 .button .btn {
   background-color: rgb(125, 210, 255, 0.65);
   border: 3px solid white;
+  color: white;
+}
+
+.button .btn:hover,
+.btn:focus {
+  color: white;
+  border-color: currentColor;
+  background-color: rgb(125, 210, 255, 1);
 }
 
 
